Closed Bug 618439 Opened 14 years ago Closed 14 years ago

VMPI TLS functions should be inlined

Categories

(Tamarin Graveyard :: Virtual Machine, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: siwilkin, Unassigned)

References

Details

Attachments

(1 file)

Attached patch Initial patchSplinter Review
This patch REALLY_INLINEs VMPI_tlsGetValue and VMPI_tlsSetValue. Upcoming threading work will call these on the critical path.
Attachment #496928 - Attachment is patch: true
Attachment #496928 - Attachment mime type: application/octet-stream → text/plain
Blocks: asymmGC
Attachment #496928 - Flags: superreview?(edwsmith)
Attachment #496928 - Flags: review?(fklockii)
Comment on attachment 496928 [details] [diff] [review] Initial patch During your own debugging, how valuable was that GCAssert that has gone away? Was it valuable enough that we might consider making the DEBUG version of VMPI_tlsSetValue out of line so that it can keep the assertion?
Attachment #496928 - Flags: superreview?(edwsmith) → superreview+
(In reply to comment #1) > Comment on attachment 496928 [details] [diff] [review] > Initial patch > > During your own debugging, how valuable was that GCAssert that has gone away? > Was it valuable enough that we might consider making the DEBUG version of > VMPI_tlsSetValue out of line so that it can keep the assertion? I never had it fire. An out-of-line debug version is fine if you really want to keep it. Note that it's only the POSIX build that had the original assert. I don't see why that should be the case, hence why I removed it rather than putting it in the Windows build too.
Attachment #496928 - Flags: review?(fklockii) → review+
changeset: 5705:6b9a815d5b7e user: Simon Wilkinson <siwilkin@adobe.com> summary: Bug 618439 - "VMPI TLS functions should be inlined" (r=fklockii,sr=edwsmith) http://hg.mozilla.org/tamarin-redux/rev/6b9a815d5b7e
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: