Bug 618439 - "VMPI TLS functions should be inlined" (r=fklockii,sr=edwsmith)