platform/win32/win32-platform.h
@@ -425,5 +425,15 @@ REALLY_INLINE vmpi_thread_t VMPI_currentThread()
     return (vmpi_thread_t) (uintptr_t)GetCurrentThreadId();
 }
 
+REALLY_INLINE bool VMPI_tlsSetValue(uintptr_t tlsId, void* value)
+{
+    return TlsSetValue((DWORD)tlsId, value) == TRUE;
+}
+
+REALLY_INLINE void* VMPI_tlsGetValue(uintptr_t tlsId)
+{
+    return TlsGetValue((DWORD)tlsId);
+}
+
 #endif // __avmplus_win32_platform__
 
